# z3

./: .travis.yml  CMakeLists.txt  README-CMake.md
cmake/: Z3Config.cmake.in  compiler_lto.cmake  compiler_warnings.cmake  msvc_legacy_quirks.cmake
contrib/ci/: README.md
contrib/ci/Dockerfiles/: z3_build.Dockerfile
contrib/ci/scripts/: build_z3_cmake.sh  ci_defaults.sh  travis_ci_linux_entry_point.sh
examples/: CMakeLists.txt
src/: CMakeLists.txt
src/api/: CMakeLists.txt  api_context.cpp
src/api/dotnet/: CMakeLists.txt
src/api/java/: CMakeLists.txt
src/model/: func_interp.h
src/smt/: asserted_formulas.h  smt_conflict_resolution.h  theory_seq.cpp  theory_seq_empty.h
src/tactic/core/: symmetry_reduce_tactic.cpp
src/util/: buffer.h
src/util/lp/: iterator_on_row.h  lar_solver.h  square_dense_submatrix.h
